benchmarks/notification_service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: notification-service
  labels:
    app.kubernetes.io/name: notification-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: notification-service
